[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "Radar_Range_Equation"
version = "2025.10.24dev1"
authors = [
  { name="Taylor", email="taylor@buzzedtop.com" },
]
description = "A Radar Range Equation Package"
readme = "python/README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*", "LICENCE*"]

[project.urls]
Homepage = "https://github.com/gleatd01/Radar_Range_Equation/"
Issues = "https://github.com/gleatd01/Radar_Range_Equation/issues"

[tool.hatch.build.targets.wheel]
sources = ["python/src/radar_range_equation/"]

[tool.hatch.build]
directory = "python/build"
