[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radar-range-equation"
version = "0.1.0"
description = "A set of radar range equation tools"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Radar Range Equation Contributors"}
]
keywords = ["radar", "range equation", "signal processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/gleatd01/Radar_Range_Equation"
Repository = "https://github.com/gleatd01/Radar_Range_Equation"
"Bug Tracker" = "https://github.com/gleatd01/Radar_Range_Equation/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
radar_range_equation = ["py.typed"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
