[package]
name = "radar-range-equation"
version = "0.1.0"
edition = "2021"
authors = ["Radar Range Equation Contributors"]
description = "A set of radar range equation tools"
license = "MIT"
repository = "https://github.com/gleatd01/Radar_Range_Equation"
homepage = "https://github.com/gleatd01/Radar_Range_Equation"
documentation = "https://docs.rs/radar-range-equation"
keywords = ["radar", "range-equation", "signal-processing"]
categories = ["science", "mathematics"]
readme = "README.md"

[dependencies]

[dev-dependencies]
approx = "0.5"

[lib]
name = "radar_range_equation"
path = "src/lib.rs"

[[example]]
name = "basic_example"
path = "examples/basic_example.rs"
